tests/NormalTests/paczka1/fuzzy1/76696091.err
Error in line 2: A825 A825 68,16
Error in line 4: VlatapZ7C S288 60,0
Error in line 16: A825 A825 94,1
Error in line 9: GQvbrfmNpwM S288 13,6
Error in line 15: j3SibRgF A825 4,0
Error in line 25: m5PdLCfP A295 89,0
Error in line 24: VlatapZ7C A295 224,5
Error in line 32: m5PdLCfP A825 41,0
